# Sinsy-Remix

./: CMakeLists.txt  README
include/: sinsy.h
lib/: CMakeLists.txt  Sinsy.cpp
lib/chinese/: CConf.cpp
lib/converter/: util_converter.cpp
lib/hts_engine_API/: SynthConditionImpl.cpp  SynthConditionImpl.h
lib/label/: ISyllableLabel.h  LabelData.cpp  LabelData.h  LabelMaker.cpp  SyllableLabeler.cpp  SyllableLabeler.h
