AUX_SOURCE_DIRECTORY(./chinese/ SRC_CHINESE)
AUX_SOURCE_DIRECTORY(./converter/ SRC_CONVERTER)
AUX_SOURCE_DIRECTORY(./japanese/ SRC_JAPANESE)
AUX_SOURCE_DIRECTORY(./hts_engine_API/ SRC_HTSENGINEAPI)
AUX_SOURCE_DIRECTORY(./label/ SRC_LABEL)
AUX_SOURCE_DIRECTORY(./score/ SRC_SCORE)
AUX_SOURCE_DIRECTORY(./temporary/ SRC_TEMPORARY)
AUX_SOURCE_DIRECTORY(./util/ SRC_UTIL)
AUX_SOURCE_DIRECTORY(./xml/ SRC_XML)
AUX_SOURCE_DIRECTORY(./hts_engine/ SRC_HTSENGINE)

add_library(SinsyRemix Sinsy.cpp ${SRC_CHINESE} ${SRC_CONVERTER} ${SRC_JAPANESE} ${SRC_HTSENGINEAPI} ${SRC_LABEL} ${SRC_SCORE} ${SRC_TEMPORARY} ${SRC_UTIL} ${SRC_XML} ${SRC_HTSENGINE})

install(TARGETS SinsyRemix DESTINATION lib)
